[package]
name = "transmission"
version = "0.2.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>, Liz van Dijk <lizztheblizz@gmail.com>, Abhi Vaidyanatha <abhivaidyanatha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "20.0.1"
fake = "2.2.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
structopt = "0.3.11"
rand = "0.7.2"